fixed spacing issue with logo, buttons now work

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 * {
-    padding-top: 15rem;
+    /*padding-top: 15rem;*/
 }
 
 .about__container {
