--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -51,10 +51,10 @@ header {
  .me > img{
     background-color: var(--color-bg-primary);
     width: 19rem;
-    height: 30rem;
+    height: 15rem;
     position: absolute;
     left: 50%;
-    top: 10rem;
+    top: 20rem;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
